# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: .maksukortti_test.py.swp  maksukortti_test.py
laskarit/viikko3/: monopoli.md
memomy_game/: .coveragerc  player_database.db  pyproject.toml  tasks.py
memomy_game/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  kysymyksia.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
memomy_game/src/: config.py  main.py  player_database.db
memomy_game/src/database/: create_database.py  get_connection.py  player_database.py
memomy_game/src/game/: check.py  check_player_input.py  loop.py  pattern.py  player.py  show_pattern.py
memomy_game/src/logic/: check.py  handle_events.py  make_buttons.py  variables.py
memomy_game/src/loops/: loop.py  registeration_loop.py
memomy_game/src/objects/: buttons.py  difficulties.py  squares.py
memomy_game/src/registeration/: player_database.py  registeration_loop.py
memomy_game/src/tests/: check_test.py  difficulties_test.py  handle_events_test.py  pattern_test.py  player_database_test.py  squares_test.py  variables_test.py
memomy_game/src/ui/: game_over_ui.py  game_ui.py  main_ui.py  registeration_ui.py  scoreboard_ui.py  settings_ui.py
memory_game/: player_database.db  pyproject.toml  tasks.py
memory_game/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  (+2 more)
(+20 files in other folders)
