[tool.poetry]
name = "memomy-game"
version = "0.1.0"
description = ""
authors = ["Essi Savonius <essi.savonius@hotmail.fi>"]
readme = "README.md"
packages = [{include = "memomy_game"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
