[tool.poetry]
name = "memomy-game"
version = "0.1.0"
description = ""
authors = ["Essi Savonius <essi.savonius@hotmail.fi>"]
readme = "README.md"
packages = [{include = "memomy_game"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
pygame = "^2.3.0"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
pylint = "^2.17.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
